--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "ENVIRONMENT=dev nodemon src/server.ts"
+    "dev": "ENVIRONMENT=dev nodemon src/server.ts",
+    "start": "node dist/server.js"
   },
   "repository": "https://github.com/cse442-fall-2019-offering/442projects-loopholes",
   "author": "Hans Bas, Supratik Neupane",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "firebase": "^6.6.1",
     "nodemon": "^1.19.2",
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1"
   }
 }
