--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1"
   }
