--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "repository": "https://github.com/cse442-fall-2019-offering/442projects-loopholes",
   "author": "Hans Bas, Supratik Neupane",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "cors": "^2.8.5",
     "firebase": "^6.6.1",
     "nodemon": "^1.19.2",
     "typescript": "^3.6.3"
