--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "dotenv": "^8.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts.data.json": "^0.3.0"
   }
 }
