--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,7 @@
   "name": "ubulletin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www-student.cse.buffalo.edu/CSE442-542/2019-Fall/cse-442i/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "dotenv": "^8.1.0",
