--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.1",
     "cors": "^2.8.5",
     "firebase": "^6.6.1",
+    "https-localhost": "^4.4.0",
     "nodemon": "^1.19.2",
     "typescript": "^3.6.3"
   },
