--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "ENVIRONMENT=dev nodemon src/server.ts",
+    "dev:local": "ENVIRONMENT=local nodemon src/server.ts",
     "start": "node dist/server.js",
     "tests": "mocha src/**/*.ts --require ts-node/register"
   },
